springcloudgateway深入理解。 了解如何重写请求和响应，如何拦截阻断。 了解全局过滤器和局部过滤器怎么使用，配置。

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,8 @@ spring:
         uri: https://www.baidu.com
         filters:
         - RewritePath=/api/baidu/.*,/
+#        - name: mygatewayfactory
+        - mygatewayfactory=test,18
         predicates:
         - Path=/api/baidu/**
       - id: github
@@ -14,6 +16,7 @@ spring:
         - Path=/api/github/**
         filters:
         - RewritePath=/api/github/(?<param>.*),/$\{param}
+        - mygatewayfactory=github,20
 #      default-filters:
 #      #全局的filter
 #      - name: addhead
